Bug 408426 - Ctrl+Tab does not switch between Tabs on Konversation
Summary: Ctrl+Tab does not switch between Tabs on Konversation
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.7.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-07 19:28 UTC by Thiago Sueto
Modified: 2020-04-08 03:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Sueto 2019-06-07 19:28:52 UTC
SUMMARY
Konversation does not allow to cycle between tabs using Ctrl+Tab.
However, Ctrl+Shift+Tab cycles backwards, and Ctrl+PageUp and Ctrl+PageDown cycle on backwards and onwards, respectively.

STEPS TO REPRODUCE
1. Have more than one tab open on Konversation, regardless of orientation (top, bottom, left)
2. Press Ctrl+Tab

OBSERVED RESULT
Nothing occurs.

EXPECTED RESULT
Switch to following tab.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 19.04
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 1 Rex Dieter 2019-06-07 20:22:22 UTC
Fwiw, not sure where Ctrl+Shift+Tab comes from, but the default shortcuts are

Ctrl+PageUp or Ctrl+[  
Ctrl+PageDown or Ctrl+]
Comment 2 Thiago Sueto 2019-06-08 23:06:35 UTC
Well, I assumed the browser tab management paradigm applied to Konversation, since Ctrl+Shift+Tab works and tabs can be positioned on top.
Would this be unintended behaviour? I think this is desirable for consistency.
Dolphin, Kate and Krita also follow this paradigm.
Comment 3 Christian Christiansen 2020-04-08 03:11:32 UTC
Git commit 2b2266d8eb926b50a80c467e88b4188d279c3db1 by Christian Christiansen.
Committed on 07/04/2020 at 22:43.
Pushed by cchristiansen into branch 'master'.

Ctrl+Tab to switch between tabs

Make Ctrl+Tab a shortcut to switch to the next tab.

M  +4    -0    src/mainwindow.cpp

https://commits.kde.org/konversation/2b2266d8eb926b50a80c467e88b4188d279c3db1