Ctrl+Tab to switch between tabs

Make Ctrl+Tab a shortcut to switch to the next tab.

BUG:408426